# Portfolio

./: README.md
Data_structures/: CMakeLists.txt  README.md
Data_structures/src/linked_list/: LinkedList.h
Data_structures/tests/: main.cpp
Data_structures_C/: README.md
Data_structures_C/src/linked_list/: LinkedList.c
Data_structures_C/tests/: CMakeLists.txt  linked_list_test.cpp
Matlab/: ADC_Quantization_error_Analysis.m  IIR_Filtering_Analysis.asv  IIR_Filtering_Analysis.m  IIR_Filtering_Freq_Analysis.m  Lock_in_algorithm.m  Lock_in_algorithm_freq.m  Lock_in_algorithm_simulation.m  Optimum_Rdac.m  Optimum_Z.m  PID_2nd_Ziegler_Nichols.m  README.md  SNR_quantiz.m  SNR_quantiz_Dithering.m
Python/GUI_MVC_Pattern/: README.md  app.py  controller.py  model.py  request_api.py  view.py
src/linked_list/: CMakeLists.txt
tests/: CMakeLists.txt  linked_list_test.cpp
